	  member of the base (unscaled) image.

	- Fl_Help_View didn't support A elements with both a
	  NAME and HREF attribute - the HREF was ignored.

	- Miscellaneous compile warning fixes.

	- Tooltips were being reset by Fl::belowmouse(), which
	  caused problems with the FLUID main window (flashing
	  tooltip windows and serious problems with KDE 2.2)


CHANGES IN FLTK 1.1.0b3

	- The top-level makefile did not include the makeinclude
	  file, causing the fltk-config installation commands to
	  fail.

	- The fl_file_chooser.cxx source file conflicted with
	  Fl_File_Chooser.cxx under Windows.  Similarly, the
	  fl_file_chooser.H header file conflicts with the
	  Fl_File_Chooser.H header file.

	- Now save and restore the GDI pen object when
	  responding to WIN32 paint messages.

	- Documentation updates from A. Suatoni.


CHANGES IN FLTK 1.1.0b2

	- New fltk-config script.

	- Fixed image/text label handling; in b1 the label
	  needed a non-blank text string to display the image. 
	  This bug also caused all sorts of crashes and display
	  problems.

	- Added new filetype() method to Fl_FileBrowser to allow
	  for file or directory browsing.

	- Fixed the drawing of the focus box around
	  Fl_Return_Button.

	- Fixed menu item measurement bug (wasn't initializing
	  image pointers to 0...)

	- Radio and checkbox menu items now draw with the new
	  style (round radio buttons with dots and square check
	  buttons with check marks.)

	- Improved the appearance of Fl_Check_Button.

	- Improved the Fl_HelpView table formatting code; now
	  dynamically sizes the table columns, and supports
	  COLSPAN.

	- The FLUID keyboard shortcuts now work as expected
	  (CTRL-C copies, SHIFT-CTRL-C writes code, etc.)

	- The FLTK_DOCDIR environment variable can now be
	  used to tell FLUID where to find the on-line
	  documentation files.

	- FLUID now supports image labels in addition to text
	  labels + text over image alignment.

	- FLUID now supports tooltips.
