@@ -35,6 +35,9 @@ CHANGES IN FLTK 1.1.0b4
 	  caused problems with the FLUID main window (flashing
 	  tooltip windows and serious problems with KDE 2.2)
 
+	- The editor demo had the save and discard button
+	  actions reversed.
+
 
 CHANGES IN FLTK 1.1.0b3
 
